--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ on:
     branches: [ main ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-#   schedule:
-#   # 定时任务，每隔 1 小时执行
-#     - cron: '0 23 * * *'
+  schedule:
+  # 定时任务，每隔 1 小时执行
+    - cron: '0 23 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
